--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Discord</title>
+    <link rel="icon" href="../img/logo-discord.png" sizes="16x16 24x24 32x32 48x48 64x64 128x128">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https: //fonts.googleapis.com/css2? family= Fredoka+One & family= Mochiy+Pop+P+One & family= Roboto:ital@0;1 & display=swap" rel="stylesheet">
 
 </head>
 <body> 
@@ -20,8 +24,18 @@
     </div>
     <button class="nav3" >Accedi </button>
    </nav>
-   <header>
-    
+   <header class="container-flex2" >
+    <h1 class="header-item" >Il tuo posto per parlare</h1>
+    <p class="header-item1">Che tu faccia parte di un club scolastico,gruppo di gamer,comunitàartistica mondiale, <br>
+       o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br>
+       Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+    </p>
+    <div class="header-item2" >
+        <button class="pulsante"><span class="freccia">&#129047;</span>Scarica per Mac</button>
+        <button class="pulsante1">Apri Discord nel tuo browser</button>
+    </div>
+
+
    </header>
 </body>
 </html>
