--- a/html/index.html
+++ b/html/index.html
@@ -5,24 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Discord</title>
+    <!-- logo -->
     <link rel="icon" href="../img/logo-discord.png" sizes="16x16 24x24 32x32 48x48 64x64 128x128">
+    <!-- style -->
     <link rel="stylesheet" href="../css/style.css">
+    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https: //fonts.googleapis.com/css2? family= Fredoka+One & family= Mochiy+Pop+P+One & family= Roboto:ital@0;1 & display=swap" rel="stylesheet">
 
 </head>
 <body> 
-   <nav class="container-flex">
-    <img class="nav-item" src="../img/logo.svg" alt="">
-    <div class="nav-item2">
-        <a href="">Scarica</a>
-        <a href="">Perché Discord </a>
-        <a href="">Nitro</a>
-        <a href="">Sicurezza</a>
-        <a href="">Assistenza</a>
-    </div>
-    <button class="nav3" >Accedi </button>
+   <nav>
+      <ul class="menu-top container">
+        <li class="logo"><a href=""><img class="nav-item" src="../img/logo.svg" alt=""></a></li> 
+        <li><a  href="#!" class="menu-link" >Scarica</a></li>
+        <li><a  href="#!" class="menu-link" >Perché Discord </a></li>
+        <li><a  href="#!" class="menu-link" >Nitro</a></li>
+        <li><a href="#!" class="menu-link" >Sicurezza</a></li>
+        <li><a href="#!" class="menu-link" >Assistenza</a></li>
+        <li class="accedi"><a href="#!" class="btn btn-white">Accedi</a></li>
+      </ul>
    </nav>
    <header class="container-flex2" >
     <h1 class="header-item" >Il tuo posto per parlare</h1>
@@ -34,8 +37,29 @@
         <button class="pulsante"><span class="freccia">&#129047;</span>Scarica per Mac</button>
         <button class="pulsante1">Apri Discord nel tuo browser</button>
     </div>
-
-
    </header>
+   <main>
+    <section class="container-flex3">
+        <img class="section-item" src="../img/item1.svg" alt="">
+        <div class="section-item1">
+            <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
+            <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
+        </div>
+    </section>
+    <section class="container-flex4">
+        <img class="section-item2" src="../img/item1.svg" alt="">
+        <div class="section-item3">
+            <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
+            <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
+        </div>
+    </section>
+    <section class="container-flex5">
+        <img class="section-item" src="../img/item1.svg" alt="">
+        <div class="section-item1">
+            <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
+            <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
+        </div>
+    </section>
+   </main>
 </body>
 </html>
