--- a/html/index.html
+++ b/html/index.html
@@ -27,15 +27,15 @@
         <li class="accedi"><a href="#!" class="btn btn-white">Accedi</a></li>
       </ul>
    </nav>
-   <header class="container-flex2" >
+   <header class="container-flex" >
     <h1 class="header-item" >Il tuo posto per parlare</h1>
     <p class="header-item1">Che tu faccia parte di un club scolastico,gruppo di gamer,comunitàartistica mondiale, <br>
-       o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br>
-       Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                            o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,<br>
+                            Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
     </p>
-    <div class="header-item2" >
-        <button class="pulsante"><span class="freccia">&#129047;</span>Scarica per Mac</button>
-        <button class="pulsante1">Apri Discord nel tuo browser</button>
+    <div class="header-item2">
+        <a href="#!" class="btn btn-white"><span class="freccia">&#129047;</span> Scarica per Mac</a>
+        <a href="#!" class="btn2 btn-black">Apri Discord nel tuo browser</a>
     </div>
    </header>
    <main>
