--- a/html/index.html
+++ b/html/index.html
@@ -39,22 +39,22 @@
     </div>
    </header>
    <main>
-    <section class="container-flex3">
+    <section class="container-flex2">
         <img class="section-item" src="../img/item1.svg" alt="">
         <div class="section-item1">
             <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
             <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
         </div>
     </section>
-    <section class="container-flex4">
-        <img class="section-item2" src="../img/item1.svg" alt="">
-        <div class="section-item3">
+    <section class="container-flex2 top1 sfondo">
+        <div class="section-item2">
             <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
             <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
         </div>
+        <img class="section-item3" src="../img/item2.svg" alt="">
     </section>
-    <section class="container-flex5">
-        <img class="section-item" src="../img/item1.svg" alt="">
+    <section class="container-flex2 top1">
+        <img class="section-item" src="../img/item3.svg" alt="">
         <div class="section-item1">
             <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
             <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
