--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Discord</title>
     <!-- logo -->
-    <link rel="icon" href="../img/logo-discord.png" sizes="16x16 24x24 32x32 48x48 64x64 128x128">
+    <link rel="icon" href="img/logo-discord.png" sizes="16x16 24x24 32x32 48x48 64x64 128x128">
     <!-- style -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 <body> 
    <nav>
       <ul class="menu-top container">
-        <li class="logo"><a href=""><img class="nav-item" src="../img/logo.svg" alt=""></a></li> 
+        <li class="logo"><a href=""><img class="nav-item" src="img/logo.svg" alt=""></a></li> 
         <li><a  href="#!" class="menu-link" >Scarica</a></li>
         <li><a  href="#!" class="menu-link" >Perché Discord </a></li>
         <li><a  href="#!" class="menu-link" >Nitro</a></li>
@@ -39,27 +39,54 @@
     </div>
    </header>
    <main>
-    <section class="container-flex2">
-        <img class="section-item" src="../img/item1.svg" alt="">
-        <div class="section-item1">
-            <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
-            <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
-        </div>
+    <section>
+      <div class="container-flex2">
+          <div class="section-item">
+              <img src="img/item1.svg" alt="">
+          </div>
+          <div class="section-item1">
+              <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
+              <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
+          </div>
+      </div>  
     </section>
-    <section class="container-flex2 top1 sfondo">
-        <div class="section-item2">
-            <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
-            <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
-        </div>
-        <img class="section-item3" src="../img/item2.svg" alt="">
+    <section class="backcolor">
+        <div class="container-flex3">
+            <div class="section-item">
+                <img src="img/item2.svg" alt="">
+            </div>
+            <div class="section-item1">
+                <h2 class="section-testo">Dove trovarsi é<br> facile</h2>
+                <p class="section-testo1">Mettiti comodo in un canale vocale quando <br> hai tempo. Gli amici nel tuo server possono <br> vedere che sei li e unirsi istantaneamente <br> senza dover chiamare. </p>
+            </div>
+        </div>  
     </section>
-    <section class="container-flex2 top1">
-        <img class="section-item" src="../img/item3.svg" alt="">
-        <div class="section-item1">
-            <h2 class="section-testo">Un luogo a invito <br> con tutto lo <br> spazio <br> necessario per <br> parlare</h2>
-            <p class="section-testo1">I server Discord sono organizzati in canali <br> tematici in cui puoi collaborare, condividere o <br> semplicemente parlare della tua giornata <br> senza intasare una chat di gruppo.</p>
+      <section>
+        <div class="container-flex2">
+            <div class="section-item">
+                <img src="img/item3.svg" alt="">
+            </div>
+            <div class="section-item1">
+                <h2 class="section-testo">Da pochi a un<br> fandom</h2>
+                <p class="section-testo1">Dai inizio a una community di qualsiasi <br>dimensione con strumenti di moderazione e <br>accesso ai membri personalizzabie. <br>Concedi ai membri poteri speciali, crea <br> canali privati, e molto altro.</p>
+            </div>
+        </div>  
+      </section>
+      <section class="backcolor" >
+          <h2 class="section-testo testo-centro"> Tecnologia affidabile per tenersi in contatto</h2>
+          <p class="section-testo1 testo-centro">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br>
+                                                 gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+        <div class="container-flex2">
+            <img src="img/item4-big.svg" alt="">
+        </div> 
+        <div class="container-flex4">
+            <img src="img/stars.svg" alt="">
         </div>
-    </section>
+        <h2 class="section-testo2"> Pronto ad iniziare la tua avventura?</h2>
+        <div class="header-item2 container-flex4">
+            <a href="#!" class="btn btn-violet"><span class="freccia">&#129047;</span> Scarica per Mac</a>
+        </div>
+      </section>
    </main>
 </body>
 </html>
