--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https: //fonts.googleapis.com/css2? family= Fredoka+One & family= Mochiy+Pop+P+One & family= Roboto:ital@0;1 & display=swap" rel="stylesheet">
-
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body> 
    <nav>
-      <ul class="menu-top container">
+      <ul class="menu-top container ">
         <li class="logo"><a href=""><img class="nav-item" src="img/logo.svg" alt=""></a></li> 
         <li><a  href="#!" class="menu-link" >Scarica</a></li>
         <li><a  href="#!" class="menu-link" >Perché Discord </a></li>
@@ -88,5 +89,68 @@
         </div>
       </section>
    </main>
+   <footer>
+      <div class="menu-top1 container-flex5 distanza-scritte">
+        <ul>
+            <li><h2>Il tuo posto per <br> parlare</h2></li>
+            <li>
+                <img class="foto-dimensione" src="img/ita.png" alt="">
+                <select class="selettore" name="Scelta" >
+                    <option value="opti1">Italiano</option>
+                    <option value="opti2">Inglese</option>
+                </select>
+            </li>
+            <li>
+                <div class="icone-margine"><i class="fa-brands fa-twitter"></i></div>
+                <div class="icone-margine"><i class="fa-brands fa-instagram"></i></div>
+                <div class="icone-margine"><i class="fa-brands fa-facebook-f"></i></div> 
+                <div class="icone-margine"><i class="fa-brands fa-youtube"></i></div>
+            </li>
+        </ul>
+        <ul>
+            <li id="Titolo-lista">Prodotto</li>
+            <li>Scarica</li>
+            <li>Perchè Discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+        </ul>
+        <ul>
+            <li id="Titolo-lista">Compagnia</li>
+            <li>Chi siamo</li>
+            <li>Lavora con noi</li>
+            <li>Marchio</li>
+            <li>Redazione</li>
+            <li>Negozio</li>
+        </ul>
+        <ul>
+            <li id="Titolo-lista">Risorse</li>
+            <li>Scarica</li>
+            <li>Perchè Discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+            <li>Scarica</li>
+            <li>Perchè Discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+        </ul>
+        <ul>
+            <li id="Titolo-lista">Norme</li>
+            <li>Scarica</li>
+            <li>Perchè Discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+        </ul>
+      </div>
+      <div class="container-flex4">
+        <img class="ultima-img" src="img/logo.svg" alt="">
+        <div class="container-flex6">
+            <a href="#!" class="btn btn-violet"><span class="freccia">Registrati</a>
+        </div>
+      </div>
+   </footer>
 </body>
 </html>
