--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           </div>
       </div>  
     </section>
+    <img  class="wave" src="img/wave.svg" alt="">
     <section class="backcolor">
         <div class="container-flex3">
             <div class="section-item">
@@ -62,6 +63,7 @@
             </div>
         </div>  
     </section>
+    <img class="wave rotated" src="img/wave.svg" alt="">
       <section>
         <div class="container-flex2">
             <div class="section-item">
@@ -73,6 +75,7 @@
             </div>
         </div>  
       </section>
+      <img class="wave " src="img/wave.svg" alt="">
       <section class="backcolor" >
           <h2 class="section-testo testo-centro"> Tecnologia affidabile per tenersi in contatto</h2>
           <p class="section-testo1 testo-centro">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br>
